<resources>
    <string name="app_name">redBus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bus_tickets">Bus tickets</string>
    <string name="search">search</string>
    <string name="enter_source">ENTER SOURCE</string>
    <string name="enter_destination">ENTER DESTINATION</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>

    <string-array name="cities">
        <item>Delhi</item>
        <item>Lucknow</item>
        <item>Bangalore</item>
        <item>Pune</item>
        <item>Chennai</item>
    </string-array>

    <string name="TermsConditions">By clicking on Continue Booking, I agree to all the &lt;a href="https://www.google.com">Terms and Conditions&lt;/a> and
    &lt;a href="https://www.google.com">Privacy Policy&lt;/a></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

</resources>