<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:background="@color/splash_red"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.23">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_red">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_tickets"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="68dp"
                android:layout_height="40dp"
                android:src="@drawable/r_logo"
                android:layout_marginRight="8dp"
                android:layout_gravity="right"/>

        </androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_marginTop="5dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/source"/>

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/txtSource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/trans"
                            android:layout_marginStart="5dp"
                            android:hint="@string/enter_source"
                            android:completionThreshold="1"
                            android:padding="8dp"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnSwap"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="-25dp"
                        android:backgroundTint="@color/light_black"
                        android:src="@drawable/swap"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/dest"/>

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/txtDest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/trans"
                            android:layout_marginStart="3dp"
                            android:padding="6dp"
                            android:completionThreshold="1"
                            android:hint="@string/enter_destination"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"/>

                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/calendar"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtdate"
                            android:layout_marginStart="15dp"
                            android:layout_width="150dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="13dp"
                            android:layout_height="wrap_content"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/txtToday"
                                    android:layout_marginStart="25dp"
                                    android:layout_width="wrap_content"
                                    android:text="@string/today"
                                    android:textSize="11sp"
                                    android:textAllCaps="true"
                                    android:textColor="@color/purple_700"
                                    android:textStyle="bold"
                                    android:layout_height="wrap_content"/>

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/txtTom"
                                    android:layout_marginStart="25dp"
                                    android:layout_width="wrap_content"
                                    android:text="@string/tomorrow"
                                    android:textSize="11sp"
                                    android:textAllCaps="true"
                                    android:textColor="@color/purple_700"
                                    android:textStyle="bold"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"/>

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:text="@string/search"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:backgroundTint="@color/splash_red"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/offwhite">

    </LinearLayout>



</LinearLayout>